--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,38 @@
 }
 
 body {
+    font-family: 'Sofia Sans', sans-serif;
     background-color: var(--blue-900);
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 100vw;
+    min-height: 100vh;
+}
+
+.creator-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+    height: 100%;
+}
+
+.creator-information {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 60%;
+    max-width: 800px;
+    gap: 3em;
 }
 
 .creators-container {
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cards-container {
@@ -49,8 +76,8 @@ body {
 
 .creator-username {
     color: var(--yellow-500);
-    font-weight: 700;
-    font-size: 3em;
+    font-weight: 900;
+    font-size: 2em;
     outline-color: #293855;
     text-transform: uppercase;
 }
@@ -58,4 +85,12 @@ body {
 .icons {
     color: var(--green-300);
     font-size: 2em;
+}
+
+.img-creator {
+    height: auto;
+    width: 300px;
+    border: 5px solid;
+    border-color: var(--blue-500);
+    padding: 5em;
 }
