--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,22 @@
 :root {
-    --green-300: #e8f1ee;
-    --yellow-500: #fbad23;
-    --green-500: #447766;
-    --green-700: #194949;
+    --purple-500: #6441a5;
+    --purple-300: #b9a3e3;
+    --black-500: #262626;
+    --white-500: #f1f1f1;
+}
+html {
+    height: 100%;
 }
 
 body {
     font-family: 'Sofia Sans', sans-serif;
-    background-color: var(--green-700);
+    background-color: var(--purple-500);
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
-    min-width: 100vw;
-    min-height: 100vh;
+    min-width: 100%;
+    min-height: 100%;
 }
 
 .creator-container {
@@ -23,14 +26,13 @@ body {
     flex-direction: column;
     width: 100%;
     height: 100%;
+    background-color: var(--purple-500);
 }
 
 .creator-information {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 60%;
-    max-width: 800px;
     gap: 3em;
 }
 
@@ -52,14 +54,14 @@ body {
     box-sizing: border-box;
     height: 500px;
     width: 35%;
-    opacity: 0.8;
+    opacity: 0.7;
     display: flex;
     flex-direction: column;
     justify-content: center;
     background-size: cover;
     background-position: center;
     border: 5px solid;
-    border-color: var(--yellow-500);
+    border-color: var(--purple-300);
     padding: 5em;
 }
 
@@ -75,26 +77,46 @@ body {
 }
 
 .creator-username {
-    color: var(--yellow-500);
+    color: var(--purple-300);
     font-weight: 900;
     font-size: 2em;
     text-transform: uppercase;
-}
+    text-shadow: 3px 3px 3px var(--black-500);}
 
 .icons {
-    color: var(--green-300);
+    color: var(--white-500);
     font-size: 2em;
 }
 
 .img-creator {
-    max-width: 100%;
+    max-width: 30%;
     height: auto;
     border: 5px solid;
-    border-color: var(--yellow-500);
+    border-color: var(--purple-300);
     padding: 1em;
 }
 
 .description {
     font-size: 2em;
-    color: var(--yellow-500);
+    color: var(--white-500);
+}
+
+.hero-title {
+    font-size: 10em;
+    text-align: center;
+    height: 100%;
+    color: var(--white-500);
+    border: 20px solid var(--black-500);
+    border-radius: 20px;
+    background-image: linear-gradient(
+        to right,
+        var(--purple-500),
+        var(--purple-300)
+    );
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 }
