--- a/src/App.css
+++ b/src/App.css
@@ -81,7 +81,8 @@ body {
     font-weight: 900;
     font-size: 2em;
     text-transform: uppercase;
-    text-shadow: 3px 3px 3px var(--black-500);}
+    text-shadow: 3px 3px 3px var(--black-500);
+}
 
 .icons {
     color: var(--white-500);
@@ -104,7 +105,6 @@ body {
 .hero-title {
     font-size: 10em;
     text-align: center;
-    height: 100%;
     color: var(--white-500);
     border: 20px solid var(--black-500);
     border-radius: 20px;
@@ -113,10 +113,32 @@ body {
         var(--purple-500),
         var(--purple-300)
     );
-    height: 80vh;
+    width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-grow: 1;
 }
 
+.add-button {
+    border-radius: 20px;
+    padding: 1em;
+    background-color: var(--black-500);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    align-self: ;
+}
+
+.add-text {
+    color: var(--white-500);
+    font-size: large;
+    margin: 10px;
+}
+
+.hero-add-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
